tests/baselines/reference/parserComputedPropertyName7(strict=true).errors.txt
parserComputedPropertyName7.ts(2,4): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
parserComputedPropertyName7.ts(2,4): error TS7008: Member '[e]' implicitly has an 'any' type.
parserComputedPropertyName7.ts(2,5): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName7.ts (3 errors) ====
    class C {
       [e]
       ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
       ~~~
!!! error TS7008: Member '[e]' implicitly has an 'any' type.
        ~
!!! error TS2304: Cannot find name 'e'.
    }